                  Thu Jul  3 14:59:46 UTC 2008


Directory libperl/Benchmarks/lib/Benchmarks
 CPU2006_data.pm           Locally Added               0 
 CPU2000_data.pm           Locally Modified          256 

Updating with simcore changes (rev. 2588 - Michael Adler)

Add definitions for SPEC CPU2006. Tweak a few comparisons for CPU2000.

----------
spartha1    Date: Thu Jul  3 11:01:02 EDT 2008  CSN: CSN-asimcore-258
                  Thu Jul  3 15:01:02 UTC 2008


Directory libperl/Benchmarks/lib/Benchmarks
 CPU2006_data.pm           Locally Modified          257 

Updating with simcore changes (rev. 2589 - Michael Adler)

SPEC CPU2006 specrand isn't really a benchmark.

----------
spartha1    Date: Thu Jul  3 11:08:55 EDT 2008  CSN: CSN-asimcore-259
                  Thu Jul  3 15:08:55 UTC 2008


Directory modules/controller/classic
 args_x86.cpp              Locally Removed           258 
 control_x86.cpp           Locally Removed           258 
 main_x86e.cpp             Locally Removed           258 
 control_x86e.h            Locally Removed           258 
 controller_x86.awb        Locally Removed           258 
 controller_x86_alg.h      Locally Removed           258 
 controller_x86e.awb       Locally Removed           258 
 controller_x86e_alg.h     Locally Removed           258 
 main_x86.cpp              Locally Removed           258 
 control_x86e.cpp          Locally Removed           258 
 control_x86.h             Locally Removed           258 

Updating with simcore changes (rev. 2590 - Carl Beckmann)

- Moved x86-specific controllers out of simcore and into x86 package

----------
spartha1    Date: Thu Jul  3 11:12:09 EDT 2008  CSN: CSN-asimcore-260
                  Thu Jul  3 15:12:09 UTC 2008


Directory tools/scripts
 asim-run                  Locally Modified          259 

Updating with simcore changes (rev. 2592 - Krishna Rangan)

- an informative mesg replaces a mysterious silent exit.